--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,27 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+base: &BASE
+  min_messages: WARNING
+  adapter: postgresql
+  encoding: unicode
+  username: postgres
+  password: postgres
+  pool: 20
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+development:
+  <<: *BASE
+  database: spielvolk_development
+
+staging:
+  <<: *BASE
+  database: spielvolk_development
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
+  <<: *BASE
+  database: spielvolk_development
+
+test: &test
+  <<: *BASE
+  database: spielvolk_test
   timeout: 5000
+
+cucumber:
+  <<: *test
